--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.1.1",
     "jade": "*",
-    "stylus": "~0.32.1"
+    "stylus": "~0.32.1",
+    "socket.io": "~0.9.14"
   }
 }
