--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "express": "3.1.1",
-    "jade": "*",
+    "jade": "0.30.0",
     "stylus": "~0.32.1",
     "socket.io": "~0.9.14"
   },
