--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facepunch",
-  "version": "0.0.1-2",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "node app.js"
